--- a/bootstrap.style.css
+++ b/bootstrap.style.css
@@ -1117,6 +1117,7 @@ progress {
     .smtext {
         font-size:10px;
     }
+   
 }
 @media (min-width:760px) {
     .show {
@@ -1131,6 +1132,11 @@ progress {
     .hide {
         display:none
     }
+        .weare {
+            height: 160px;
+            width: 870px;
+    
+        }
    
 }
 
