--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@
     font-style: normal;
 }
 
+.bed {
+    flex-direction: column;
+        display: none;
+        justify-content: center;
+        align-items: center;
+}
+
 
 
 
